--- a/nesting-flexbox/style-START.css
+++ b/nesting-flexbox/style-START.css
@@ -34,10 +34,39 @@ a:hover {
   background:rgba(0,0,0,0.4);
 }
 
-
+/* flex container */
 .slider-nav ul {
   list-style: none;
   margin: 0;
   padding: 0; 
+  display: flex;
+  
+}
+
+/* outer flex items, also inner flex container*/
+.slider-nav li {
+  flex: 2;
+  text-align: center;
+  display: flex;
+}
+
+.slider-nav a {
+  flex-basis: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.slider-nav .arrow {
+  flex: 1;
+}
+
+.arrow a {
+  font-size: 30px;
+}
+
+/* inner flex items, needed to both stretch and center */
+.slider-nav span {
+  display: block;
+  width: 100%;
 }
 
